--- a/publish/PBWBU/PBWBU000001.html
+++ b/publish/PBWBU/PBWBU000001.html
@@ -1050,6 +1050,32 @@
 						</div>
 						<!-- //group-form -->
 
+						<div class="stroke my40"></div>
+
+						<!-- group-form -->
+						<div class="group-form">
+							<div class="group-title">
+								<strong class="title-medium">휴대폰번호</strong>
+							</div>
+							<div class="group-content">
+								<div class="inp-group">
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad012">
+											<span class="label-title">공개</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad012">
+											<span class="label-title">비공개</span>
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
 						<!-- group-form -->
 						<div class="group-form mt40">
 							<div class="group-title">
