--- a/publish/PBWBU/PBWBU010001.html
+++ b/publish/PBWBU/PBWBU010001.html
@@ -138,7 +138,10 @@
 									<span>과장</span>
 								</span>
 								<span class="company-name">파인너츠</span>
-								<span class="tags tags-small tags-lightBlue"><i class="icon-only icon-15 icon-keyman"></i>키맨</span>
+								<span class="tag-wrap d-flex gap8">
+									<span class="tags tags-small tags-lightBlue"><i class="icon-only icon-15 icon-keyman"></i>키맨</span>
+									<span class="tags tags-small tags-lightCyan"><i class="icon-only icon-15 icon-privacy"></i>나만보기</span>
+								</span>
 							</button>
 							<figure>
 								<div class="due-date">
@@ -164,6 +167,9 @@
 									<span>직책</span>
 								</span>
 								<span class="company-name">회사명</span>
+								<span class="tag-wrap d-flex gap8">
+									<span class="tags tags-small tags-lightCyan"><i class="icon-only icon-15 icon-privacy"></i>나만보기</span>
+								</span>
 							</button>
 							<figure>
 								<div class="due-date">
@@ -245,6 +251,7 @@
 								<li class="select-all"><button type="button"><span>전체</span><i class="badge">10</i></button></li>
 								<li><button type="button"><span>키맨</span><i class="badge">2</i></button></li>
 								<li><button type="button"><span>내가 등록한 명함</span><i class="badge">5</i></button></li>
+								<li><button type="button"><span>나만보기한 명함</span><i class="badge">10</i></button></li>
 								<li><button type="button"><span>내가 등록한 명함 내가 등록한 명함 내가 등록한 명함 내가 등록한 명함</span><i class="badge">5</i></button></li>
 								<li class="select-active"><button type="button" aria-label="선택됨"><span>PB 1팀</span><i class="badge">3</i></button></li>
 							</ul>
