--- a/publish/PBWBU/PBWBU020001_tablet.html
+++ b/publish/PBWBU/PBWBU020001_tablet.html
@@ -108,8 +108,14 @@
 					<div class="section-tablet section-tablet-row">
 						<!-- section-tablet-left -->
 						<div class="section-tablet-left">
+
+							<div class="tags-wrap d-flex gap8 mt16">
+								<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
+								<div class="tags tags-medium tags-lightCyan"><i class="icon-only icon-18 icon-privacy"></i>나만보기</div>
+							</div>
+
 							<!-- upload-picture -->
-							<div class="upload-picture mt16">
+							<div class="upload-picture mt8">
 								<button type="button" class="upload-picture-anchor" id="modalTrigger" aria-label="이미지 확대보기">
 									<picture>
 										<source srcset="/resources/images/@temp/@business_card.png">
@@ -132,9 +138,6 @@
 										<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
 									</div>
 									<div class="divide-list mt16 px4">
-										<div class="tags-wrap mr10">
-											<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
-										</div>
 										<span>부서명</span>
 										<div class="division h14 mx8"></div>
 										<span>직책</span>
@@ -593,7 +596,6 @@
 			const textOuterHeight = parseInt(window.getComputedStyle(text).height);
 			const textLineClamp = text.dataset.line;
 			const textMaxHeight = textLineHeight * textLineClamp;
-			console.log(textOuterHeight)
 			if (textOuterHeight > textMaxHeight) {
 				text.classList.add('line-clamp')
 			} else {
