--- a/publish/index.html
+++ b/publish/index.html
@@ -491,6 +491,15 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU000001</a></td>
 					</tr>
+
+					<tr class="for-tablet for-new">
+						<td></td>
+						<td></td>
+						<td>[Tablet] 내명함공유</td>
+						<td>목록</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU000001_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -507,7 +516,7 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001</a></td>
 					</tr>
-					<tr class="for-tablet">
+					<tr class="for-tablet for-new">
 						<td></td>
 						<td></td>
 						<td>[Tablet] 고객 명함 관리</td>
@@ -523,7 +532,7 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010002</a></td>
 					</tr>
-					<tr class="for-tablet">
+					<tr class="for-tablet for-new">
 						<td></td>
 						<td></td>
 						<td></td>
@@ -547,7 +556,7 @@
 						<td>수정</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_modify</a></td>
 					</tr>
-					<tr class="for-tablet">
+					<tr class="for-tablet for-new">
 						<td></td>
 						<td></td>
 						<td></td>
@@ -573,7 +582,7 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001</a></td>
 					</tr>
-					<tr class="for-tablet">
+					<tr class="for-tablet for-new">
 						<td></td>
 						<td></td>
 						<td></td>
@@ -1041,7 +1050,7 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFI040000</a></td>
 					</tr>
-					<tr>
+					<tr class="for-new">
 						<td></td>
 						<td></td>
 						<td>환율계산기 V2</td>
