--- a/publish/PBWBU/PBWBU010002.html
+++ b/publish/PBWBU/PBWBU010002.html
@@ -90,10 +90,36 @@
 				<!-- content -->
 				<div class="content">
 
-					<!-- group -->
+
+					<!-- group-form -->
 					<div class="group-form mt16">
 						<div class="group-title">
-							<strong class="title-medium">고객 명함 이미지</strong>
+							<strong class="title-medium">명함 유형<i class="apos" aria-label="필수 입력">*</i></strong>
+						</div>
+						<div class="group-content">
+							<div class="inp-group">
+								<div class="inp inp-medium">
+									<label>
+										<input type="radio" name="rad002">
+										<span class="label-title">지점 공유</span>
+									</label>
+								</div>
+								<div class="inp inp-medium">
+									<label>
+										<input type="radio" name="rad002">
+										<span class="label-title">나만보기</span>
+									</label>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- //group-form -->
+
+
+					<!-- group -->
+					<div class="group-form mt40">
+						<div class="group-title">
+							<strong class="title-medium">고객 명함 이미지<i class="apos" aria-label="필수 입력">*</i></strong>
 						</div>
 						<div class="group-content mt8">
 							<!-- upload-picture -->
