--- a/publish/index.html
+++ b/publish/index.html
@@ -1363,6 +1363,30 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWNO010000</a></td>
 					</tr>
+					<tr class="for-new">
+						<td></td>
+						<td>게시판</td>
+						<td>목록</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWNO100000</a></td>
+					</tr>
+					<tr class="for-new">
+						<td></td>
+						<td></td>
+						<td>검색결과없음</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWNO100000_noresult</a></td>
+					</tr>
+					<tr class="for-new">
+						<td></td>
+						<td></td>
+						<td>상세</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWNO011000</a></td>
+					</tr>
 				</tbody>
 				<tbody data-folder="PBWCH">
 					<tr>
