--- a/publish/PBWLO/PBWLO01002_04.html
+++ b/publish/PBWLO/PBWLO01002_04.html
@@ -108,7 +108,7 @@
 										<p class="validate-text"></p>
 									</div>
 
-									<div class="btn-wrap my24">
+									<div class="btn-wrap">
 										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
 									</div>
 
