--- a/publish/PBWLO/PBWLO01002_05.html
+++ b/publish/PBWLO/PBWLO01002_05.html
@@ -98,7 +98,7 @@
 								<p class="validate-text"></p>
 							</div>
 
-							<div class="btn-wrap my24">
+							<div class="btn-wrap">
 								<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>로그인</button>
 							</div>
 
