--- a/publish/PBWLO/PBWLO050000.html
+++ b/publish/PBWLO/PBWLO050000.html
@@ -87,12 +87,12 @@
 							<!-- tab-content -->
 							<p class="title-large my24 ac">로그아웃 되었습니다.</p>
 
-							<div class="btn-wrap my24">
+							<div class="btn-wrap">
 								<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>재로그인</button>
 							</div>
 
 							<div class="btn-wrap py0">
-								<button type="button" class="btn-xsmall btn-outlined btn-round">RM 로그인</button>
+								<a href="#" class="anchor underline fs-15">RM WON 페이지로 이동하시겠어요?</a>
 							</div>
 
 
