--- a/publish/PBWLO/PBWLO01002_03.html
+++ b/publish/PBWLO/PBWLO01002_03.html
@@ -100,12 +100,12 @@
 										<p class="validate-text"></p>
 									</div>
 
-									<div class="btn-wrap my24">
+									<div class="btn-wrap">
 										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
 									</div>
 
 									<div class="btn-wrap py0">
-										<button type="button" class="btn-xsmall btn-outlined btn-round">RM 로그인</button>
+										<a href="#" class="anchor underline fs-15">RM WON 페이지로 이동하시겠어요?</a>
 									</div>
 
 								</div>
