--- a/publish/PBWLO/PBWLO01002_reg.html
+++ b/publish/PBWLO/PBWLO01002_reg.html
@@ -98,13 +98,13 @@
 									<p class="validate-text"></p>
 								</div>
 
-								<div class="btn-wrap my24">
+								<div class="btn-wrap">
 									<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i>생체인증 등록</button>
 									<!-- <button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i>생체인증 등록</button> -->
 								</div>
 
 								<div class="btn-wrap p0">
-									<button type="button" class="btn-xsmall btn-outlined btn-round">RM WON 로그인</button>
+									<a href="#" class="anchor underline fs-15">RM WON 페이지로 이동하시겠어요?</a>
 								</div>
 
 
