--- a/publish/PBWLO/PBWLO01002_reg.html
+++ b/publish/PBWLO/PBWLO01002_reg.html
@@ -99,8 +99,8 @@
 								</div>
 
 								<div class="btn-wrap">
-									<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i>생체인증 등록</button>
-									<!-- <button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i>생체인증 등록</button> -->
+									<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i>생체인증 등록 / 로그인</button>
+									<!-- <button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i>생체인증 등록 / 로그인</button> -->
 								</div>
 
 								<div class="btn-wrap p0">
