--- a/publish/index.html
+++ b/publish/index.html
@@ -1074,6 +1074,23 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFI050000_nodata</a></td>
 					</tr>
+					<tr class="for-new">
+						<td></td>
+						<td></td>
+						<td>환율알림 설정</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFI100000</a></td>
+					</tr>
+					<tr class="for-new">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>알림 상세</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFI110000</a></td>
+					</tr>
+
 				</tbody>
 				<tbody data-folder="PBWCA">
 					<tr>
