--- a/publish/PBWFI/PBWFI110000.html
+++ b/publish/PBWFI/PBWFI110000.html
@@ -151,7 +151,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>저장</button>
+				<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '알림을 설정했어요.')"><i class="ico-check"></i>저장</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -160,7 +160,7 @@
 		<div class="bottom-btn">
 			<div class="btn-wrap">
 				<button type="button" class="btn-large btn-outlined">알림해제</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>저장</button>
+				<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '알림을 설정했어요.')"><i class="ico-check"></i>저장</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
